# HytaleRU.app

./: .gitignore  LICENSE  changelog.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml  test.yml
src/: main.ts  styles.css  types.ts
src-tauri/: Cargo.toml  hytaleru.desktop  tauri.conf.json
src-tauri/.config/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/keys/.tauri/: hytaleRUapp.key  hytaleRUapp.key.pub
src-tauri/src/: gamepath.rs  lib.rs  localization.rs  main.rs  updater.rs
src-tauri/src/APIs/: app_updater.rs  lang_updater.rs  mod.rs
src-tauri/~/.tauri/: uploader.key.pub
src/services/: gamePath.ts  localization.ts  update.ts
src/ui/: toast.ts
