[package]
name = "hytale-ru-app"
version = "1.1.0-19"
description = "HytaleRU.app"
authors = ["AER"]
license = "MIT"
edition = "2021"

[lib]
name = "hytaleru_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-opener = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-updater = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
tokio = "1.49.0"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]
